--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<meta name="author" content="João Pedro Botelho">
 
 			<link rel="stylesheet" type="text/css" href="style.css">
-			<link rel='icon' type='image/png' href="logo.png">
+			<link rel='icon' type='image/png' href="arquivos/logo.png">
 		</head>
 		
 		<body>
